[2020-07-05]
- Fixed Health Point computation
- Fixed Triple Attack damage computation

[2020-07-04]
- Added Ancient Tower monsters
- Fixed The Ring of Nibelugen damage formula

[2020-06-21]
- Fixed AR/FAR ASPD party buff
- Fixed Eddga behaviour with MDEF
- Added new Elysian Garden monsters
- Shield Chain now take into consideration class defense bypass

[2020-05-29]
- Fixed Spiral Pierce damage computation

[2020-05-28]
- Form validation upon save action
- Fixed Sting Hat script
- Fixed Wood Goblin refine bonus damage
- Fixed ASPD value for Katar on Assassin
- Added Dragonfly Monocle

[2020-05-01]
- Fixed A Whistle Perfect Dodge bonus computation
- Fixed Stone Skin, Anti Magic, Magic Mirror and Keeping skills

[2020-04-26]
- Shield Chain now take into consideration race defense bypass
- Naming functionality for builds

[2020-04-24]
- Fixed Finger Offensive damage computation

[2020-04-19]
- Fixed Bragi behaviour
- Fixed hard DEF formula
- Added Candy Hat, Pitch Black Evil Druid Hat
- Fixed some monsters properties

[2020-04-11]
- Fixed aspd computation for double dagger
- Added Eclage food

[2020-04-04]
- Fixed Heal damage computation

[2020-04-02]
- Added Old Glast Heim cards 
- Added new Eclase's equipment
- Added Elysian Garden and Malangdo Culvert monsters

[2020-04-01]
- Added April patch cards 
- Added Eclase and Old Glast Heim monsters

[2020-03-25]
- Fixed Gold Scaraba card ATK bonus for damage computation
- Fixed Imperial Spear ATK bonus for damage computation
- Added Star Dust Hairband

[2020-03-24]
- Added Akkorokamui instance's equipment
- Removed MDEF penetration from Nightmare Verit card

[2020-02-29]
- Fixed flat MATK bonus for MATK computation
- Fixed magical elemental damage computation

[2020-01-05]
- Updated BG items

[2019-12-22]
- Brasilis and Moscovia cards

[2019-12-07]
- Fixed CRIT formula
- Fixed misc bugs

[2019-10-30]
- Added Old Glast Heim items

[2019-10-27]
- Fixed Damage calculation with Wakwak card