@@ -35,13 +35,14 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
-		<span><b>2020-07-04</b></span>
+		<span><b>2020-07-20</b></span>
 		<div id="changelog20200704">
 			<ul>
 				<li>Fixed Health Point computation</li>
-				<li>Fixed Triple Attack damage computation</li>
-				<li>Fixed The Ring of Nibelugen damage formula</li>
+				<li>Fixed MDEF armor enchantment</li>
+				<li>Fixed The Ring of Nibelugen and Bragi formula</li>
 				<li>Added Ancient Tower and Elysian Garden monsters</li>
+				<li>Fixed Triple Attack and Spiral Pierce damage computation</li>
 			</ul>
 		</div>
 		<br/>
@@ -49,7 +50,6 @@
 		<div id="changelog20200621">
 			<ul>
 				<li>Fixed AR/FAR ASPD party buff</li>
-				<li>Fixed Spiral Pierce damage computation</li>
 				<li>Fixed ASPD value for Katar on Assassin</li>
 				<li>Shield Chain now take into consideration class defense bypass</li>
 			</ul>
