@@ -1,3 +1,10 @@
+[2020-07-20]
+- Fixed Bragi formula
+- Added Beach Towel garment
+- Fixed MDEF armor enchantment
+- Fixed Magmaring critical bonus
+- Fixed Valorous Carnage Katar Sonic Blow damage bonus when linked
+
 [2020-07-05]
 - Fixed Health Point computation
 - Fixed Triple Attack damage computation
